Project

General

Profile

Actions

Bug #23624

closed

cephfs-foo-tool crashes immediately it starts

Added by Zheng Yan about 6 years ago. Updated about 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
% Done:

0%

Source:
Development
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
tools
Labels (FS):
crash
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Actions #1

Updated by Zheng Yan about 6 years ago

  • Status changed from New to Fix Under Review
Actions #2

Updated by Patrick Donnelly about 6 years ago

  • Assignee set to Zheng Yan
  • Source set to Development
  • Component(FS) tools added
Actions #3

Updated by Patrick Donnelly about 6 years ago

  • Subject changed from cephfs-foo-tool crashes immediately it starts. to cephfs-foo-tool crashes immediately it starts
  • Status changed from Fix Under Review to Resolved
  • Labels (FS) crash added
Actions

Also available in: Atom PDF