tools/cephfs: instantiate MDSUtility after global_init()

cephfs-foo-tool from current master crashes immediately it starts.

Introduced by commit 6972273d53d "global: output usage on -h, --help,
or no args before contacting mons"

Signed-off-by: "Yan, Zheng" <zyan@redhat.com>
Fixes: http://tracker.ceph.com/issues/23624